# aegis-vault-v6.0

./: .gitattributes  .gitignore  README.md  SECURITY.md  metadata.json  package-lock.json  package.json  playwright.config.ts  stryker.app.config.json  stryker.config.json  stryker.database.config.json  stryker.hooks.config.json  stryker.secure-share.config.json  stryker.settings.config.json  stryker.sqlite-opfs.config.json  stryker.ui.config.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  pull_request_template.md
docs/: ANDROID_BUILD_EVIDENCE.md  ANDROID_ROADMAP.md  ANDROID_SIGNING.md  ANDROID_SIGNING_KEY_ROTATION.md  ANDROID_SMOKE_CHECKLIST.md  AUDIT_EVIDENCE.md  AUTOFILL_ROADMAP.md  AUTOFILL_SAVE_THREAT_MODEL.md  BRANCH_PROTECTION_POLICY.md  BROWSER_EXTENSION_DISTRIBUTION.md  DEPENDENCY_POLICY.md  DESKTOP_AUTOFILL_EXTENSION.md  DESKTOP_PACKAGING.md  DESKTOP_SMOKE_EVIDENCE.md  ERROR_TAXONOMY.md  FUTURE_CRYPTO_ROADMAP.md  GITHUB_SETUP.md  KVKK_GDPR_COMPLIANCE.md  MUTATION_POLICY.md  OWASP_COMPLIANCE_MATRIX.md  PRIVACY_NOTICE.md  RELEASE.md  RELEASE_HARDENING.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_NOTES_v6.0.0.md  RELEASE_NOTES_v6.0.0_DRAFT.md  RELEASE_READINESS_v6.0.0.md  RELEASE_SIGNING_POLICY.md  SECURE_SHARE_FORMAT.md  SECURITY_LOGGING_POLICY.md  SECURITY_MODEL.md  THREAT_MODEL.md  VALIDATION_RULES.md  VULNERABILITY_DISCLOSURE.md
scripts/: check-build-budget.mjs  clean-desktop-bundles.mjs  finalize-browser-extension-artifacts.mjs  generate-artifact-checksums.mjs  generate-sbom.mjs  generate-security-evidence.mjs  package-browser-extension.mjs  render-icon-source.mjs  security-regression-scan.mjs  stage-android-artifacts.mjs  stage-browser-extension.mjs  stage-desktop-artifacts.mjs  stage-desktop-autofill-host.mjs  verify-android-readiness.mjs  verify-branch-protection-policy.mjs  verify-dependency-policy.mjs  verify-desktop-autofill-extension.mjs  verify-desktop-smoke-policy.mjs  verify-error-taxonomy.mjs  verify-no-repo-secrets.mjs  verify-privacy-notice.mjs  verify-release-artifacts.mjs  verify-release-notes-template.mjs  verify-release-signing.mjs  verify-release-version.mjs  verify-secure-share-format.mjs  verify-security-evidence-bundle.mjs  verify-security-logging-policy.mjs  verify-validation-rules.mjs  verify-vulnerability-disclosure.mjs  verify-workflow-permissions.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/i18n/: index.ts  (+1 more)
test/: setup.ts
(+138 files in other folders)
