[package]
name = "aegisvault"
version = "6.0.0"
description = "Local-first encrypted offline password manager and security center."
authors = ["AegisVault"]
edition = "2021"
license = "UNLICENSED"
repository = "https://github.com/hafgit99/aegis-vault-v6.0"
default-run = "aegisvault"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-biometry = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_Memory"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
